refactor(tagforward): 优化标签转发插件代码并移除冗余文件
- 删除 src/main/java/org/xlyo/cocomonyab/plugin/tagforward/service/package-info.java 文件，该文件为冗余文档。
- 在 TagBasedMessageForwardingPlugin.java 中，将 mediaGroupMessageIds.get(0) 改为 mediaGroupMessageIds.getFirst()，提升代码可读性和一致性。